--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en" style="width:100%; height:100%;">
   <body style="width:100%; height:100%; margin:0;">
-   <a href="kathrinellieroth.github.io/CV.pdf" target="_blank">https://github.com/kathrinellieroth/kathrinellieroth/raw/master/CV.pdf.</a>
+   <a href="https://github.com/kathrinellieroth/kathrinellieroth/raw/master/CV.pdf" target="_blank">PDF.</a>
   </body>
 </html>
 
