--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<a href="https://github.com/kathrinellieroth/kathrinellieroth/CV.pdf" target="_blank">PDF.</a>
+<a href="https://kathrinellieroth.github.io/kathrinellieroth/CV.pdf" target="_blank">PDF.</a>
 </html>
 
+<!-- https://github.com/kathrinellieroth/kathrinellieroth/CV.pdf -->
